[gd_scene load_steps=15 format=3 uid="uid://8dda1wpf1vgu"]

[ext_resource type="Script" path="res://Scripts/Terrain/LevelGenerator.gd" id="1_00run"]
[ext_resource type="Texture2D" uid="uid://dxvnnl65k7esb" path="res://icon.svg" id="1_iqy45"]
[ext_resource type="Shader" path="res://Shaders/Water.gdshader" id="1_kd2pq"]
[ext_resource type="Texture2D" uid="uid://ct1h2woxsxlyt" path="res://Assets/Landscape/landscape.png" id="1_uesm5"]
[ext_resource type="Script" path="res://Scripts/Enivrovment/Camera2D.gd" id="3_g3t6g"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xf7hh"]
frequency = 0.2088

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_oevax"]
width = 20
height = 20
noise = SubResource("FastNoiseLite_xf7hh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ylm7p"]
texture = ExtResource("1_uesm5")
margins = Vector2i(0, 16)
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0

[sub_resource type="TileSet" id="TileSet_xirh1"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_ylm7p")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uofct"]
frequency = 0.0278

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7lqgk"]
noise = SubResource("FastNoiseLite_uofct")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8etnd"]
frequency = 0.15

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cu2ry"]
noise = SubResource("FastNoiseLite_8etnd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_705x7"]
shader = ExtResource("1_kd2pq")
shader_parameter/_scroll1 = Vector2(0.025, 0.01)
shader_parameter/_scroll2 = Vector2(-0.005, -0.001)
shader_parameter/_distortionStrength = 0.023
shader_parameter/_toneColor = Color(0.535808, 0.817456, 0.731326, 1)
shader_parameter/_topColor = Color(1, 1, 1, 1)
shader_parameter/_lightStart = 0.44
shader_parameter/_lightEnd = 0.957
shader_parameter/_noise1 = SubResource("NoiseTexture2D_7lqgk")
shader_parameter/_noise2 = SubResource("NoiseTexture2D_cu2ry")

[node name="Main" type="Node2D"]

[node name="LevelGenerator" type="Node2D" parent="."]
script = ExtResource("1_00run")

[node name="NoiseSprite" type="Sprite2D" parent="LevelGenerator"]
visible = false
texture = SubResource("NoiseTexture2D_oevax")

[node name="Underwater" type="TileMapLayer" parent="LevelGenerator"]
texture_filter = 1
use_parent_material = true
tile_set = SubResource("TileSet_xirh1")

[node name="Water" type="Sprite2D" parent="LevelGenerator"]
material = SubResource("ShaderMaterial_705x7")
position = Vector2(216, 140)
scale = Vector2(7.0625, 3.37891)
texture = ExtResource("1_iqy45")

[node name="Ground" type="TileMapLayer" parent="LevelGenerator"]
texture_filter = 1
use_parent_material = true
tile_set = SubResource("TileSet_xirh1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(86, 125)
zoom = Vector2(3, 3)
script = ExtResource("3_g3t6g")
SmothSpeed = 4.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="x_tb" type="TextEdit" parent="UI/Control"]
layout_mode = 1
offset_right = 50.0
offset_bottom = 36.0
text = "10"

[node name="y_tb" type="TextEdit" parent="UI/Control"]
layout_mode = 1
offset_left = 60.0
offset_right = 110.0
offset_bottom = 36.0
text = "10"
